[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/enemysprite/01.png" type="Texture" id=1]
[ext_resource path="res://assets/enemysprite/02.png" type="Texture" id=2]
[ext_resource path="res://assets/enemysprite/03.png" type="Texture" id=3]
[ext_resource path="res://src/scripts/Slime.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 65.0233, 62.5183 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14.0024, 10 )

[sub_resource type="CircleShape2D" id=4]
radius = 351.652

[node name="Slime" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 13
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 9.32045, -11.0986 )
scale = Vector2( 4.63413, 4.23763 )
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.199612, -1.64732 )
shape = SubResource( 2 )

[node name="AttackDetector" type="Area2D" parent="."]
visible = false
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector"]
visible = false
position = Vector2( -2.03446, 4.06892 )
shape = SubResource( 3 )

[node name="PlayerChecker" type="Area2D" parent="."]
visible = false
monitorable = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerChecker"]
visible = false
position = Vector2( -1.12247, 1.35843 )
shape = SubResource( 4 )

[node name="InvulnerabilityTimer" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="AttackDetector" to="." method="_on_AttackDetector_area_entered"]
[connection signal="area_exited" from="AttackDetector" to="." method="_on_AttackDetector_area_exited"]
[connection signal="body_entered" from="PlayerChecker" to="." method="_on_PlayerChecker_body_entered"]
[connection signal="body_exited" from="PlayerChecker" to="." method="_on_PlayerChecker_body_exited"]
